# learn-c

./: .gitignore  CMakeLists.txt  README.md  empty.c  main.c  make_test_file.c  test.txt  test_wrong_c.c
ChapterFive/: chapter_five_demo.c
ChapterFour/: chapter_four_demo.c  extern_demo.c  register_demo.c  static_function.c  static_inside_demo.c  static_outside_demo.c
ChapterOne/: 1_10.c  1_10.h  1_2_1.c  1_2_2.c  1_3_1.c  1_4.c  1_4.h  1_4_1.c  1_5.c  1_5.h  1_5_1.c  1_5_2.c  1_5_3.c  1_5_4.c  1_5_5.c  1_5_6.c  1_6.c  1_6.h  1_7.c  1_7.h  1_8.c  1_8.h  1_9.c  1_9.h  fahr_celsius.c  fahr_celsius.h  main.c
ChapterThree/: atoi_demo.c  chapter_three.c  chapter_three.h  exercise_3_1.c  exercise_3_1.h
ChapterTwo/: 2_3.c  atoi_test.c  bitcount_test.c  exercise_2.c  exercise_2.h  exercise_2_1.c  exercise_2_3.c  exercise_2_4.c  exercise_2_5.c  getbits_test.c  lower_test.c  rand_test.c  squeeze_test.c  strcat_test.c  strlen_test.c
Personal/: pointer_operator_test.c  pointer_operator_test.h
chapter_five/: chapter_five_demo.c  exercise_5_1.c  exercise_5_10.c  exercise_5_2.c  exercise_5_3.c  exercise_5_4.c  exercise_5_5.c  exercise_5_6.c  exercise_5_7.c  exercise_5_8.c  exercise_5_9.c
chapter_four/: chapter_four_demo.c  exercise_4_1.c  exercise_4_10.c  exercise_4_11.c  exercise_4_12.c  exercise_4_13.c  exercise_4_14.c  exercise_4_2.c  exercise_4_3.c  exercise_4_4.c  exercise_4_5.c  exercise_4_6.c  exercise_4_7.c  exercise_4_8.c  exercise_4_9.c  extern_demo.c  register_demo.c  static_function.c  static_inside_demo.c  static_outside_demo.c
chapter_one/: 1_10_1.c  1_2_1.c  1_2_2.c  1_3_1.c  1_4_1.c  1_5_1.c  1_5_2.c  1_5_3.c  1_5_4.c  1_5_5.c  1_5_6.c  1_6_1.c  1_7_1.c  1_9_1.c  exercise_1_10.c  exercise_1_12.c  exercise_1_13.c  exercise_1_14.c  exercise_1_15.c  exercise_1_16.c  exercise_1_17.c  exercise_1_18.c  exercise_1_19.c  exercise_1_20.c  exercise_1_21.c  exercise_1_22.c  exercise_1_23.c  exercise_1_24.c  exercise_1_3.c  exercise_1_4.c  exercise_1_5.c  exercise_1_6.c  exercise_1_7.c  exercise_1_8.c  exercise_1_9.c
chapter_six/: struct_alignment.c
chapter_three/: 3_4_1.c  atoi_demo.c  chapter_three.c  chapter_three.h  exercise_3_1.c  exercise_3_2.c  exercise_3_3.c  exercise_3_4.c  exercise_3_5.c  exercise_3_6.c
chapter_two/: 2_3.c  atoi_test.c  bitcount_test.c  exercise_2_1.c  exercise_2_10.c  exercise_2_2.c  exercise_2_3.c  exercise_2_4.c  exercise_2_5.c  exercise_2_6.c  exercise_2_7.c  exercise_2_8.c  exercise_2_9.c  getbits_test.c  lower_test.c  rand_test.c  squeeze_test.c  strcat_test.c  strlen_test.c
doc/: chapter-one.md  chapter-two.md
