cmake_minimum_required(VERSION 3.20)
project(learn_c C)

set(CMAKE_C_STANDARD 17)
set(CMAKE_C_STANDARD_REQUIRED ON)

add_executable(make_test_file make_test_file.c)

add_executable(1_2_1 chapter_one/1_2_1.c)
add_executable(1_2_2 chapter_one/1_2_2.c)
add_executable(1_3_1 chapter_one/1_3_1.c)
add_executable(1_4_1 chapter_one/1_4_1.c)
add_executable(1_5_1 chapter_one/1_5_1.c)
add_executable(1_5_2 chapter_one/1_5_2.c)
add_executable(1_5_3 chapter_one/1_5_3.c)
add_executable(1_5_4 chapter_one/1_5_4.c)
add_executable(1_5_5 chapter_one/1_5_5.c)
add_executable(1_5_6 chapter_one/1_5_6.c)
add_executable(1_6_1 chapter_one/1_6_1.c)
add_executable(1_7_1 chapter_one/1_7_1.c)
add_executable(1_9_1 chapter_one/1_9_1.c)
add_executable(1_10_1 chapter_one/1_10_1.c)
add_executable(exercise_1_3 chapter_one/exercise_1_3.c)
add_executable(exercise_1_4 chapter_one/exercise_1_4.c)
add_executable(exercise_1_5 chapter_one/exercise_1_5.c)
add_executable(exercise_1_6 chapter_one/exercise_1_6.c)
add_executable(exercise_1_7 chapter_one/exercise_1_7.c)
add_executable(exercise_1_8 chapter_one/exercise_1_8.c)
add_executable(exercise_1_9 chapter_one/exercise_1_9.c)
add_executable(exercise_1_10 chapter_one/exercise_1_10.c)
add_executable(exercise_1_12 chapter_one/exercise_1_12.c)
add_executable(exercise_1_13 chapter_one/exercise_1_13.c)
add_executable(exercise_1_14 chapter_one/exercise_1_14.c)
add_executable(exercise_1_15 chapter_one/exercise_1_15.c)
add_executable(exercise_1_16 chapter_one/exercise_1_16.c)
add_executable(exercise_1_17 chapter_one/exercise_1_17.c)
add_executable(exercise_1_18 chapter_one/exercise_1_18.c)
add_executable(exercise_1_19 chapter_one/exercise_1_19.c)
add_executable(exercise_1_20 chapter_one/exercise_1_20.c)
add_executable(exercise_1_21 chapter_one/exercise_1_21.c)
add_executable(exercise_1_22 chapter_one/exercise_1_22.c)
add_executable(exercise_1_23 chapter_one/exercise_1_23.c)
add_executable(exercise_1_24 chapter_one/exercise_1_24.c)

add_executable(2_3 chapter_two/2_3.c)
add_executable(strlen_test chapter_two/strlen_test.c)
add_executable(atoi_test chapter_two/atoi_test.c)
add_executable(lower_test chapter_two/lower_test.c)
add_executable(rand_set chapter_two/rand_test.c)
add_executable(squeeze_test chapter_two/squeeze_test.c)
add_executable(strcat_test chapter_two/strcat_test.c)
add_executable(getbits_test chapter_two/getbits_test.c)
add_executable(bitcount_test chapter_two/bitcount_test.c)
add_executable(exercise_2_1 chapter_two/exercise_2_1.c)
add_executable(exercise_2_2 chapter_two/exercise_2_2.c)
add_executable(exercise_2_3 chapter_two/exercise_2_3.c)
add_executable(exercise_2_4 chapter_two/exercise_2_4.c)
add_executable(exercise_2_5 chapter_two/exercise_2_5.c)
add_executable(exercise_2_6 chapter_two/exercise_2_6.c)
add_executable(exercise_2_7 chapter_two/exercise_2_7.c)
add_executable(exercise_2_8 chapter_two/exercise_2_8.c)
add_executable(exercise_2_9 chapter_two/exercise_2_9.c)
add_executable(exercise_2_10 chapter_two/exercise_2_10.c)

add_executable(3_4_1 chapter_three/3_4_1.c)
add_executable(atoi_demo chapter_three/atoi_demo.c)
add_executable(exercise_3_1 chapter_three/exercise_3_1.c)
add_executable(exercise_3_2 chapter_three/exercise_3_2.c)
add_executable(exercise_3_3 chapter_three/exercise_3_3.c)
add_executable(exercise_3_4 chapter_three/exercise_3_4.c)
add_executable(exercise_3_5 chapter_three/exercise_3_5.c)
add_executable(exercise_3_6 chapter_three/exercise_3_6.c)

add_executable(chapter_four_demo chapter_four/chapter_four_demo.c)
add_executable(extern_demo chapter_four/extern_demo.c)
add_executable(static_inside_demo chapter_four/static_inside_demo.c)
add_executable(static_outside_demo chapter_four/static_outside_demo.c chapter_four/static_function.c)
add_executable(register_demo chapter_four/register_demo.c)
add_executable(exercise_4_1 chapter_four/exercise_4_1.c)
add_executable(exercise_4_2 chapter_four/exercise_4_2.c)
add_executable(exercise_4_3 chapter_four/exercise_4_3.c)
add_executable(exercise_4_4 chapter_four/exercise_4_4.c)
add_executable(exercise_4_5 chapter_four/exercise_4_5.c)
add_executable(exercise_4_6 chapter_four/exercise_4_6.c)
add_executable(exercise_4_7 chapter_four/exercise_4_7.c)
add_executable(exercise_4_8 chapter_four/exercise_4_8.c)
add_executable(exercise_4_9 chapter_four/exercise_4_9.c)
add_executable(exercise_4_10 chapter_four/exercise_4_10.c)
add_executable(exercise_4_11 chapter_four/exercise_4_11.c)
add_executable(exercise_4_12 chapter_four/exercise_4_12.c)
add_executable(exercise_4_13 chapter_four/exercise_4_13.c)
add_executable(exercise_4_14 chapter_four/exercise_4_14.c)

add_executable(chapter_five_demo chapter_five/chapter_five_demo.c)
add_executable(exercise_5_1 chapter_five/exercise_5_1.c)
add_executable(exercise_5_2 chapter_five/exercise_5_2.c)
add_executable(exercise_5_3 chapter_five/exercise_5_3.c)

target_link_libraries(exercise_2_3 m)